# thingyjp-ota

./: .gitmodules  README.md  args.h  crypto.c  crypto.h  keygen.c  manifest.c  manifest.h  meson.build  meson_options.txt  mtd.c  mtd.h  ota.c  ota.h  repo.c  stamp.c  stamp.h  teenyhttp.c  teenyhttp.h  utils.c  utils.h
subprojects/: thingymcconfig.wrap
